getting memory usage under control