@@ -3,4 +3,4 @@ ARG version
 EXPOSE 8080
 RUN mkdir -p /app/
 ADD build/libs/gl-api-${version}.jar /app/gl-api.jar
-ENTRYPOINT ["java", "-jar", "/app/gl-api.jar"]
+ENTRYPOINT ["java", "-XX:+PrintFlagsFinal", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-jar", "/app/gl-api.jar"]
